# npp

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.ultra  DEPLOY.md  HANDOFF.md  IDEAS.md  MEMORY.md  NPP_ROADMAP.md  PHASE_ANALYSIS.md  README.md  ROADMAP.md  SUBMODULE_INVENTORY.md  TODO.md  VISION.md  build.py  build.sh  build_safe.sh  exit_loop.py  start.bat  test_file.cpp  test_lexer.cpp  track_architecture.sh
.jules/memory/: architecture.md
.jules/sessions/: 3646841170776745183.md
.pi/tasks/: tasks-7f577171-fd00-402a-9446-191dd49c9e5e.json
PowerEditor/src/: BobScintilla.h  GlassBuildConfigDialog.h  GlassCollabClient.h  GlassCommandPalette.h  GlassCompareManager.h  GlassConfigXML.h  GlassFindInFilesDialog.h  GlassFunctionParser.h  GlassMarkdownPreview.h  GlassPluginManager.h  GlassPreferencesDialog.h  GlassSearchWorker.h  GlassSettings.h  GlassShortcutMapper.h  GlassSnippetsManager.h  GlassSplashScreen.h  GlassStyleConfigurator.h  GlassTerminal.h  GlassThemeManager.h  GlassUDLManager.h  LiquidGlass.h  NppBobUI_Main.cpp  NppBobUI_POC.cpp  NppLiquidGlass_Main.cpp  NppLiquidGlass_Main_btk.cpp  TextFXEngine.h  functionList.xml  stylers.xml
PowerEditor/src/ScintillaComponent/: AutoCompletion.cpp  AutoCompletion.cpp.orig
core/: EventBus.h  GeanyParity.h  GoBridge.cpp  GoBridge.h  IScintillaBridge.h  MockScintillaBridge.h  NativeScintilla.cpp  NativeScintilla.h  README.md  UIWindow.h  VersioningAutosave.h
docs/maestro/state/: active-session.md
docs_suite/: AGENTS.md  ARCHITECTURE_TRACKER.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  GEMINI.md  GPT.md  IDEAS.md  MEMORY.md  PHASE_ANALYSIS.md  ROADMAP.md  SCINTILLA_PORTING.md  SUBMODULES.md  TODO.md  VISION.md
go-port/: Makefile  go.mod
go-port/cmd/ultra/: main.go
go-port/pkg/autosave/: autosave.go  autosave_test.go  db.go  db_test.go
go-port/pkg/bindings/: events_cgo.go  events_cgo_test.go  scintilla_cgo.go  ui_cgo.go
go-port/pkg/buildsys/: builder.go  builder_test.go
go-port/pkg/commands/: defaults.go  manager.go  manager_test.go
go-port/pkg/config/: parameters.go  parameters_test.go
go-port/pkg/core/: buffer.go  buffer_test.go  eventbus.go  eventbus_test.go
go-port/pkg/io/: fileio.go  fileio_test.go
go-port/pkg/lsp/: client.go  client_test.go  manager.go  manager_test.go
go-port/pkg/markdown/: parser.go  parser_test.go
go-port/pkg/plugins/: manager.go  manager_test.go
go-port/pkg/terminal/: pty.go
go-port/pkg/textfx/: core.go  core_test.go
go-port/pkg/workspace/: layout.go  layout_test.go
lexilla/src/: CMakeLists.txt
scintilla/win32/: CMakeLists.txt
specs/: epic-npp-bobui-overhaul.md
